--- a/index.html
+++ b/index.html
@@ -615,7 +615,7 @@
 
              <div class="max-w-5xl mx-auto">
                 <div class="text-center mb-12">
-                    <h2 class="text-3xl font-bold text-white sm:text-4xl mb-4 flex items-center justify-center gap-3">
+                    <h2 class="text-3xl font-bold text-white sm:text-4xl mb-4 flex items-center justify-center gap-2 md:gap-3">
                         <i data-lucide="award" class="text-cyber-purple w-8 h-8"></i>
                         Sertifikasi & Penghargaan
                     </h2>
