--- a/index.html
+++ b/index.html
@@ -643,18 +643,18 @@
                         </div>
                     </div>
 
-                    <div class="project-card group relative bg-cyber-slate/60 rounded-lg overflow-hidden border border-dashed border-gray-700 transition-all duration-300 flex flex-col h-full opacity-90" data-category="security">
-                        <div class="relative aspect-video overflow-hidden flex items-center justify-center bg-black/40">
-                            <div class="text-center">
-                                <i data-lucide="x-circle" class="w-16 h-16 text-red-500 mx-auto"></i>
-                                <div class="text-xs text-gray-400 mt-2">Belum Ada Konten</div>
-                            </div>
+                    <div class="project-card group relative bg-cyber-slate rounded-lg overflow-hidden border border-gray-800 hover:border-cyber-cyan transition-all duration-300 hover:shadow-[0_0_20px_rgba(6,182,212,0.15)] hover:-translate-y-2 flex flex-col h-full" data-category="security">
+                        <div class="relative aspect-video overflow-hidden">
+                            <img src="images/documentation/ds1.png" class="w-full h-full object-cover transform group-hover:scale-110 transition-transform duration-700">
+                            <div class="absolute inset-0 bg-gradient-to-t from-cyber-slate via-transparent to-transparent opacity-80"></div>
+                            <div class="absolute top-4 right-4 px-3 py-1 bg-black/60 backdrop-blur border border-gray-600 rounded text-xs font-mono text-cyber-cyan uppercase">SECURITY</div>
                         </div>
                         <div class="p-6 flex-1 flex flex-col">
-                            <h3 class="text-xl font-bold text-white mb-2 group-hover:text-cyber-cyan transition-colors">Kosong</h3>
-                            <p class="text-gray-500 text-sm mb-4 line-clamp-3">Proyek ini belum ditambahkan. Klik untuk mengisi nanti.</p>
+                            <h3 class="text-xl font-bold text-white mb-2 group-hover:text-cyber-cyan transition-colors">Proyek Tracker-Fish v2.0</h3>
+                            <p class="text-gray-400 text-sm mb-4 line-clamp-3">Educational Cyber-Security Tool untuk simulasi pelacakan perangkat dan metadata melalui teknik social engineering dan phising.</p>
                             <div class="flex flex-wrap gap-2 mt-auto">
-                                <span class="px-2 py-1 bg-cyber-dark text-xs text-gray-400 rounded border border-gray-700 font-mono">#DS</span>
+                                <span class="px-2 py-1 bg-cyber-dark text-xs text-gray-300 rounded border border-gray-700 font-mono">#DS</span>
+                                <span class="px-2 py-1 bg-cyber-dark text-xs text-gray-300 rounded border border-gray-700 font-mono">#Cyber</span>
                             </div>
                         </div>
                     </div>
